<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="acc_label_zip_short">ZIP</string>
    <string name="acc_label_card_number_node">%s, Card number</string>
    <string name="acc_label_expiry_date_node">%s, Expiration date</string>
    <string name="acc_label_cvc_node">%s, CVC</string>
    <string name="address_label_name">Name</string>
    <string name="address_label_name_optional">Name (optional)</string>
    <string name="address_label_address">Address</string>
    <string name="address_label_address_optional">Address (optional) </string>
    <string name="address_label_address_line1">Address line 1</string>
    <string name="address_label_address_line1_optional">Address line 1 (optional)</string>
    <string name="address_label_apt_optional">Apt. (optional)</string>
    <string name="address_label_address_line2">Address line 2</string>
    <string name="address_label_address_line2_optional">Address line 2 (optional)</string>
    <string name="address_label_apt">Apt.</string>
    <string name="address_label_city">City</string>
    <string name="address_label_city_optional">City (optional)</string>
    <string name="address_label_county">County</string>
    <string name="address_label_county_optional">County (optional)</string>
    <string name="address_label_country">Country</string>
    <string name="address_label_phone_number">Phone number</string>
    <string name="address_label_phone_number_optional">Phone number (optional)</string>
    <string name="address_label_state">State</string>
    <string name="address_label_state_optional">State (optional)</string>
    <string name="address_label_zip_code">ZIP code</string>
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <string name="address_label_postal_code">Postal code</string>
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <string name="address_label_postcode">Postcode</string>
    <string name="address_label_postcode_optional">Postcode (optional)</string>
    <string name="address_label_zip_postal_code">ZIP/Postal code</string>
    <string name="address_label_zip_postal_code_optional">ZIP / Postal code (optional)</string>
    <string name="address_shipping_address">Shipping Address</string>
    <string name="address_zip_invalid">Your ZIP code is invalid.</string>
    <string name="address_postcode_invalid">Your postcode is invalid</string>
    <string name="address_postal_code_invalid">Your postal code is invalid</string>
    <string name="address_zip_postal_invalid">Your ZIP/Postal code is invalid</string>
    <string name="address_country_invalid" tools:ignore="MissingTranslation">Your country is invalid</string>
    <string name="address_label_province">Province</string>
    <string name="address_label_province_optional">Province (optional)</string>
    <string name="address_label_region_generic"> State / Province / Region</string>
    <string name="address_label_region_generic_optional">State / Province / Region (optional)</string>
    <string name="address_name_required">Please enter your name</string>
    <string name="address_required">Please enter your address</string>
    <string name="address_city_required">Please enter your city</string>
    <string name="address_county_required">Please enter your county</string>
    <string name="address_state_required">Please enter your state</string>
    <string name="address_province_required">Please enter your province</string>
    <string name="address_region_generic_required">Please enter your State/Province/Region</string>
    <string name="address_phone_number_required">Please enter your phone number</string>
    <string name="card_ending_in" tools:ignore="MissingTranslation">%1$s ending in %2$s</string>
    <string name="expiry_date_hint">MM/YY</string>
    <string name="expiry_label_short">Expiry</string>
    <string name="invalid_card_number">Your card\'s number is invalid.</string>
    <string name="invalid_expiry_month">Your card\'s expiration month is invalid.</string>
    <string name="incomplete_expiry_date" tools:ignore="MissingTranslation">Your card\'s expiration date is incomplete.</string>
    <string name="invalid_expiry_year">Your card\'s expiration year is invalid.</string>
    <string name="invalid_cvc">Your card\'s security code is invalid.</string>
    <string name="invalid_zip">Your postal code is incomplete.</string>
    <string name="payment_method_add_new_card">Add new card&#8230;</string>
    <string name="payment_method_add_new_fpx" tools:ignore="MissingTranslation">Select Bank Account (FPX)&#8230;</string>
    <string name="price_free">Free</string>
    <string name="title_add_a_card">Add a Card</string>
    <string name="title_bank_account" tools:ignore="MissingTranslation">Bank Account</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_add_an_address">Add an Address</string>
    <string name="title_select_shipping_method">Select Shipping Method</string>
    <string name="no_payment_methods">No payment methods.</string>
    <string name="add_card">Add a new debit or credit card to make purchases in this app.</string>
    <string name="invalid_shipping_information">Invalid Shipping Address</string>
    <string name="secure_checkout">Secure Checkout</string>
    <string name="close">Close</string>
    <string name="added" tools:ignore="MissingTranslation">Added %s</string>
    <string name="removed" tools:ignore="MissingTranslation">Removed %s</string>
    <string name="delete_payment_method_prompt_title" tools:ignore="MissingTranslation">Delete payment method?</string>
    <string name="delete_payment_method" tools:ignore="MissingTranslation">Delete payment method</string>
    <string name="fpx_bank_offline" tools:ignore="MissingTranslation">%s - Offline</string>
    <string name="google_pay" tools:ignore="MissingTranslation">Google Pay</string>
    <string name="becs_widget_name" tools:ignore="MissingTranslation">Name</string>
    <string name="becs_widget_email" tools:ignore="MissingTranslation">Email Address</string>
    <string name="becs_widget_bsb" tools:ignore="MissingTranslation">BSB</string>
    <string name="becs_widget_account_number" tools:ignore="MissingTranslation">Account number</string>
    <string name="becs_widget_bsb_invalid" tools:ignore="MissingTranslation">The BSB you entered is invalid.</string>
    <string name="becs_widget_bsb_incomplete" tools:ignore="MissingTranslation">The BSB you entered is incomplete.</string>
    <string name="becs_widget_account_number_required" tools:ignore="MissingTranslation">Your account number is required.</string>
    <string name="becs_widget_account_number_incomplete" tools:ignore="MissingTranslation">Your account number is incomplete.</string>
    <string name="becs_widget_name_required" tools:ignore="MissingTranslation">Your name is required.</string>
    <string name="becs_widget_email_required" tools:ignore="MissingTranslation">Your email address is required.</string>
    <string name="becs_widget_email_invalid" tools:ignore="MissingTranslation">Your email address is invalid.</string>
    <string name="becs_mandate_acceptance" tools:ignore="MissingTranslation">
    By providing your bank account details and confirming this payment, you agree to this
    Direct Debit Request and the
    &lt;a href="https://stripe.com/au-becs-dd-service-agreement/legal"&gt;Direct Debit Request service agreement&lt;/a&gt;,
    and authorise Stripe Payments Australia Pty Ltd ACN 160 180 343 Direct Debit User ID number 507156
    (“Stripe”) to debit your account through the Bulk Electronic Clearing System (BECS) on
    behalf of %1$s (the "Merchant") for any amounts separately communicated to you
    by the Merchant. You certify that you are either an account holder or an authorised
    signatory on the account listed above.
    </string>
    <string name="stripe_paymentsheet_back" tools:ignore="MissingTranslation">Back</string>
    <string name="stripe_paymentsheet_close" tools:ignore="MissingTranslation">Close</string>
    <string name="stripe_paymentsheet_pay_using" tools:ignore="MissingTranslation">Pay using</string>
    <string name="stripe_paymentsheet_pay_using_with_amount" tools:ignore="MissingTranslation">Pay %s using</string>
    <string name="stripe_paymentsheet_select_payment_method" tools:ignore="MissingTranslation">Select a payment method</string>
    <string name="stripe_paymentsheet_add_payment_method_title" tools:ignore="MissingTranslation">Add a payment method</string>
    <string name="stripe_paymentsheet_add_payment_method_card_information" tools:ignore="MissingTranslation">Card information</string>
    <string name="stripe_paymentsheet_add_payment_method_country_or_region" tools:ignore="MissingTranslation">Country or region</string>
    <string name="stripe_paymentsheet_new_card_button_label" tools:ignore="MissingTranslation">+ New card</string>
    <string name="stripe_paymentsheet_save_this_card" tools:ignore="MissingTranslation">Save this card for future payments</string>
    <string name="stripe_paymentsheet_save_this_card_with_merchant_name" tools:ignore="MissingTranslation">Save this card for future %s payments</string>
    <string name="stripe_paymentsheet_or_pay_with" tools:ignore="MissingTranslation">Or pay with card</string>
    <string name="stripe_paymentsheet_expiration_date_hint" tools:ignore="MissingTranslation">MM / YY</string>
    <string name="stripe_paymentsheet_pay_button_label" tools:ignore="MissingTranslation">Pay</string>
    <string name="stripe_paymentsheet_pay_button_amount" tools:ignore="MissingTranslation">Pay %s</string>
    <string name="stripe_paymentsheet_primary_button_processing" tools:ignore="MissingTranslation">Processing…</string>
    <string name="stripe_paymentsheet_add_button_label" tools:ignore="MissingTranslation">Add</string>
    <string name="stripe_failure_reason_authentication" tools:ignore="MissingTranslation">We are unable to authenticate your payment method. Please choose a different payment method and try again.</string>
    <string name="stripe_failure_reason_timed_out" tools:ignore="MissingTranslation">Timed out authenticating your payment method -- try again</string>
</resources>