<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_label_name"
        >

        <com.stripe.android.view.StripeEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_address_line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_label_address"
        >

        <com.stripe.android.view.StripeEditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_address_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_label_apt"
        >

        <com.stripe.android.view.StripeEditText
            android:id="@+id/et_apt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_label_city"
        >

        <com.stripe.android.view.StripeEditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_label_state"
        >

        <com.stripe.android.view.StripeEditText
            android:id="@+id/et_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_postal_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_label_zip_code"
        >

        <com.stripe.android.view.StripeEditText
            android:id="@+id/et_postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_label_phone_number"
        >

        <com.stripe.android.view.StripeEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/valid_digits"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>

</merge>
