<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StripePaymentAddPaymentMethodMaterialCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/country_layout"
                style="@style/StripePaymentSheetAutocompleteTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperTextEnabled="false">

                <AutoCompleteTextView
                    android:id="@+id/country"
                    style="@style/StripePaymentSheetTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:paddingVertical="13dp"
                    android:paddingHorizontal="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/address1_divider"
                android:visibility="gone"
                style="@style/StripePaymentSheetFormDivider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address1_layout"
                style="@style/StripePaymentSheetTextInputLayout"
                android:hint="@string/address_label_address_line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address1"
                    style="@style/StripePaymentSheetTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/address2_divider"
                android:visibility="gone"
                style="@style/StripePaymentSheetFormDivider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address2_layout"
                android:visibility="gone"
                style="@style/StripePaymentSheetTextInputLayout"
                android:hint="@string/address_label_address_line2_optional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address2"
                    style="@style/StripePaymentSheetTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/postal_code_divider"
                style="@style/StripePaymentSheetFormDivider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postal_code_layout"
                style="@style/StripePaymentSheetTextInputLayout"
                android:hint="@string/acc_label_zip_short"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postal_code"
                    style="@style/StripePaymentSheetTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</merge>
